--- a/index.html
+++ b/index.html
@@ -3,50 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cock Wizard</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Chatbot Interface</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <header>
-        <h1>Cock Wizard</h1>
-        <nav>
-            <ul>
-                <li><a href="#cock">Cock</a></li>
-                <li><a href="#wizard">Wizard</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="cock-wizard">
-            <h2>Welcome to Cock Wizard</h2>
-            <p>This is your introduction or welcome message.</p>
-        </section>
-
-        <section id="cock">
-            <h2>Cock</h2>
-            <p>Content related to "Cock" goes here.</p>
-        </section>
-
-        <section id="wizard">
-            <h2>Wizard</h2>
-            <p>Content related to "Wizard" goes here.</p>
-        </section>
-
-        <!-- Placeholder for GPT-based Chatbot -->
-        <section id="chatbot">
-            <h2>Chat with Cock Wizard</h2>
-            <div id="chatbot-container">
-                <div id="chatbot">
+    <div id="chatbot">
         <div id="chatbox" class="chatbox"></div>
         <input type="text" id="userInput" class="user-input" placeholder="Ask something...">
         <button id="sendButton" class="send-button">Send</button>
     </div>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file --><!-- Chatbot interface will be integrated here -->
-            </div>
-        </section>
-    </main>
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
-
