--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+    <header>
+        <h1>Cock Wizard</h1>
+        <nav>
+            <ul>
+                <li><a href="#cock">Cock</a></li>
+                <li><a href="#wizard">Wizard</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="chatbot">
         <div id="chatbox" class="chatbox"></div>
         <input type="text" id="userInput" class="user-input" placeholder="Ask something...">
