--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             </ul>
         </nav>
     </header>
-    <div id="chatbot">
-        <div id="chatbox" class="chatbox"></div>
-        <input type="text" id="userInput" class="user-input" placeholder="Ask something...">
-        <button id="sendButton" class="send-button">Send</button>
+     <div id="chat-container">
+        <div id="chatbox"></div>
+        <input type="text" id="userInput" placeholder="Type your message...">
+        <button id="sendButton">Send</button>
     </div>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
-</body>
+    <script src="chat.js"></script>
 </html>
