--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
         <button id="sendButton">Send</button>
     </div>
 
-    <script src="chat.js"></script>
+    <script src="script.js"></script>
 </html>
