--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             </ul>
         </nav>
     </header>
-    <div id="chatbox">
-        <div id="chatbox"></div>
-        <input type="text" id="userInput" placeholder="Type your message...">
-        <button id="sendButton">Send</button>
-    </div>
+ <div id="chat-container">
+    <div id="chatbox"></div>
+    <input type="text" id="userInput" placeholder="Type your message...">
+    <button id="sendButton">Send</button>
+</div>
+
 
     <script src="script.js"></script>
 </html>
