--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
         </nav>
     </header>
  <div id="chat-container">
-    <div id="chatbox"></div>
-    <input type="text" id="userInput" placeholder="Type your message...">
-    <button id="sendButton">Send</button>
+    <div id="chatbox" class="chatbox"></div>
+    <input type="text" id="userInput" class="user-input" placeholder="Type your message...">
+    <button id="sendButton" class="send-button">Send</button>
 </div>
-
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </html>
