--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cock Wizard</title>
+    <title>Chat Interface</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <header>
-        <h1>Cock Wizard</h1>
-        <nav>
-            <ul>
-                <li><a href="#cock">Cock</a></li>
-                <li><a href="#wizard">Wizard</a></li>
-            </ul>
-        </nav>
-    </header>
- <div id="chat-container">
-    <div id="chatbox" class="chatbox"></div>
-    <input type="text" id="userInput" class="user-input" placeholder="Type your message...">
-    <button id="sendButton" class="send-button">Send</button>
-</div>
-<script src="script.js"></script>
+    <div id="chat-container">
+        <div id="chatbox" class="chatbox"></div>
+        <input type="text" id="userInput" class="user-input" placeholder="Type your message...">
+        <button id="sendButton" class="send-button">Send</button>
+    </div>
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
