--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Interface</title>
+    <title>Chatbot Interface</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <div id="chat-container">
+    <div id="chatbot">
         <div id="chatbox" class="chatbox"></div>
-        <input type="text" id="userInput" class="user-input" placeholder="Type your message...">
+        <input type="text" id="userInput" class="user-input" placeholder="Ask something...">
         <button id="sendButton" class="send-button">Send</button>
     </div>
+
     <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
