--- a/index.html
+++ b/index.html
@@ -2,17 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot Interface</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <title>Cockwizard</title>
+    <style>
+        body {
+            background-color: #f5deb3; /* Parchment color */
+        }
+        #chatbox {
+            width: 100%;
+            height: 400px;
+            border: 1px solid #ccc;
+            margin: 20px 0;
+            padding: 10px;
+            background-color: white;
+            overflow-y: auto;
+        }
+    </style>
 </head>
 <body>
-    <div id="chatbot">
-        <div id="chatbox" class="chatbox"></div>
-        <input type="text" id="userInput" class="user-input" placeholder="Ask something...">
-        <button id="sendButton" class="send-button">Send</button>
-    </div>
-
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <nav class="container-fluid">
+        <ul>
+            <li><strong>Cockwizard</strong></li>
+        </ul>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#" role="button">Contact</a></li>
+        </ul>
+    </nav>
+    <main class="container">
+        <div class="grid">
+            <section>
+                <hgroup>
+                    <h2>Welcome to Cockwizard</h2>
+                    <h3>Your Gateway to Magical Communication</h3>
+                </hgroup>
+                <p>Connect and interact seamlessly with our Cloudflare Worker API.</p>
+                <div id="chatbox">
+                    <!-- Chatbox will be here -->
+                </div>
+                <p>Type your message below and hit send to communicate.</p>
+                <input type="text" id="message" name="message" placeholder="Type your message here" aria-label="Type your message" required />
+                <button type="submit" onclick="event.preventDefault()">Send</button>
+            </section>
+        </div>
+    </main>
+    <footer class="container">
+        <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a></small>
+    </footer>
 </body>
 </html>
