--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cockwizard</title>
     <style>
         body {
-            background-color: #f5deb3; /* Parchment color */
+            background-color: #EF4040; 
         }
         #chatbox {
             width: 100%;
@@ -15,7 +15,7 @@
             border: 1px solid #ccc;
             margin: 20px 0;
             padding: 10px;
-            background-color: white;
+            background-color: #C21292;
             overflow-y: auto;
         }
     </style>
@@ -26,9 +26,8 @@
             <li><strong>Cockwizard</strong></li>
         </ul>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#" role="button">Contact</a></li>
+            <li><a href="#">Cock</a></li>
+            <li><a href="#">Wizard</a></li>
         </ul>
     </nav>
     <main class="container">
