--- a/index.html
+++ b/index.html
@@ -34,21 +34,16 @@
         <div class="grid">
             <section>
                 <hgroup>
-                    <h2>Welcome to Cockwizard</h2>
-                    <h3>Your Gateway to Magical Communication</h3>
+                    <h2>This is still a mothrfucking chatbot</h2>
                 </hgroup>
-                <p>Connect and interact seamlessly with our Cloudflare Worker API.</p>
                 <div id="chatbox">
                     <!-- Chatbox will be here -->
                 </div>
-                <p>Type your message below and hit send to communicate.</p>
-                <input type="text" id="message" name="message" placeholder="Type your message here" aria-label="Type your message" required />
-                <button type="submit" onclick="event.preventDefault()">Send</button>
+                <p>Hit that shit</p>
+                <input type="text" id="message" name="message" placeholder="Say something racist" aria-label="say something racist" required />
+                <button type="submit" onclick="event.preventDefault()">do it</button>
             </section>
         </div>
     </main>
-    <footer class="container">
-        <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a></small>
-    </footer>
 </body>
 </html>
