--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cockwizard</title>
     <style>
         body {
-            background-color: #EF4040; 
+            background-color: #E36414; 
         }
         #chatbox {
             width: 100%;
@@ -15,8 +15,21 @@
             border: 1px solid #ccc;
             margin: 20px 0;
             padding: 10px;
-            background-color: #C21292;
+            background-color: #5F0F40;
             overflow-y: auto;
+        }
+          button {
+            background-color: #9A031E; /* Green background */
+            color: white; /* White text */
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
         }
     </style>
 </head>
