--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <style>
         body {
             background-color: #E36414; 
+            color: #FFF7D4;
         }
         #chatbox {
             width: 100%;
             height: 400px;
-            border: 1px solid #ccc;
+            border: 2px solid #9A031E;
             margin: 20px 0;
             padding: 10px;
             background-color: #5F0F40;
             overflow-y: auto;
         }
           button {
-            background-color: #9A031E; /* Green background */
-            color: white; /* White text */
+            background-color: #9A031E; 
+            color: white; 
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
