--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background-color: #E36414; 
-            color: #FFF7D4;
+            color: #1B4242;
         }
         #chatbox {
             width: 100%;
