--- a/index.html
+++ b/index.html
@@ -61,3 +61,48 @@
     </main>
 </body>
 </html>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const messageInput = document.getElementById('message');
+        const chatbox = document.getElementById('chatbox');
+        const submitButton = document.querySelector('button[type="submit"]');
+
+        submitButton.addEventListener('click', function() {
+            const message = messageInput.value;
+            if (message) {
+                sendMessageToBackend(message);
+                messageInput.value = ''; // Clear the input field
+            }
+        });
+
+        async function sendMessageToBackend(message) {
+            try {
+                const response = await fetch('https://api.cockwizard.com/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ messages: [{ text: message }] })
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const responseData = await response.json();
+                displayMessage(`You: ${message}`);
+                displayMessage(`Bot: ${responseData.choices[0].message.content}`);
+            } catch (error) {
+                console.error('Error:', error);
+                displayMessage('Error: Could not connect to the chatbot');
+            }
+        }
+
+        function displayMessage(message) {
+            const messageElement = document.createElement('p');
+            messageElement.textContent = message;
+            chatbox.appendChild(messageElement);
+            chatbox.scrollTop = chatbox.scrollHeight; // Scroll to the bottom
+        }
+    });
+</script>
