--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         async function sendMessageToBackend(message) {
             try {
-                const response = await fetch('https://api.cockwizard.com/', {
+                const response = await fetch('https://hello-world-shrill-night-d9f1.gentoogoon.workers.dev/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
