--- a/index.html
+++ b/index.html
@@ -76,34 +76,33 @@
         });
 
         async function sendMessageToBackend(message) {
-    try {
-        const response = await fetch('https://api.cockwizard.com/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ messages: [{ text: message }] })
-        });
+            try {
+                const response = await fetch('https://api.cockwizard.com/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ message: message }) // Updated to match backend expectations
+                });
 
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const responseData = await response.json();
+
+                // Displaying messages
+                displayMessage(`You: ${message}`);
+                if (responseData.choices && responseData.choices.length > 0) {
+                    displayMessage(`Bot: ${responseData.choices[0].text}`);
+                } else {
+                    displayMessage('Error: Unexpected response format');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                displayMessage('Error: Could not connect to the chatbot');
+            }
         }
-
-        const responseData = await response.json();
-        displayMessage(`You: ${message}`);
-        console.log(responseData);
-        
-        if (responseData && responseData.choices && responseData.choices.length > 0) {
-            displayMessage(`Bot: ${responseData.choices[0].message.content}`);
-        } else {
-            displayMessage('Error: Unexpected response format');
-        }
-    } catch (error) {
-        console.error('Error:', error);
-        displayMessage('Error: Could not connect to the chatbot');
-    }
-}
-
 
         function displayMessage(message) {
             const messageElement = document.createElement('p');
