--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <hgroup>
                     <h2>This is still a mothrfucking chatbot</h2>
                 </hgroup>
+                <img src="path_to_your_image.jpg" alt="Chat Image" id="chatImage" style="width:100%; height:auto; display:block;">
                 <div id="chatbox">
                     <!-- Chatbox will be here -->
                 </div>
