--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <hgroup>
                     <h2>This is still a mothrfucking chatbot</h2>
                 </hgroup>
-                <img src="path_to_your_image.jpg" alt="Chat Image" id="chatImage" style="width:100%; height:auto; display:block;">
+                <img src="images/DALL·E 2024-02-07 05.34.14 - A psychedelic rooster wizard in the style of Grimm's fairy tales, wearing a wizard's hat and robe, surrounded by colorful, swirling magical energies a.png" alt="Chat Image" id="chatImage" style="width:100%; height:auto; display:block;">
                 <div id="chatbox">
                     <!-- Chatbox will be here -->
                 </div>
