--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             border: none;
             border-radius: 4px;
         }
+        #chatImage {
+        max-width: 600px; /* or any specific width */
+        margin: 0 auto; /* for centering if needed */
+        border-radius: 10px; /* if you want rounded corners */
+        /* Other styles as needed */
+    }
     </style>
 </head>
 <body>
