--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             border-radius: 4px;
         }
         #chatImage {
-        max-width: 600px; /* or any specific width */
-        margin: 0 auto; /* for centering if needed */
-        border-radius: 10px; /* if you want rounded corners */
-        /* Other styles as needed */
+        max-width: 600px; 
+        margin: 0 auto; 
+        border-radius: 10px; 
+        
     }
     </style>
 </head>
@@ -57,7 +57,7 @@
                 </hgroup>
                 <img src="images/DALL·E 2024-02-07 05.34.14 - A psychedelic rooster wizard in the style of Grimm's fairy tales, wearing a wizard's hat and robe, surrounded by colorful, swirling magical energies a.png" alt="Chat Image" id="chatImage" style="width:100%; height:auto; display:block;">
                 <div id="chatbox">
-                    <!-- Chatbox will be here -->
+                    
                 </div>
                 <p>Hit that shit</p>
                 <input type="text" id="message" name="message" placeholder="Say something racist" aria-label="say something racist" required />
