--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             color: #1B4242;
         }
         #chatbox {
-            width: 100%;
-            height: 400px;
+            width: 600px;
+            height: 600px;
             border: 2px solid #9A031E;
             margin: 20px 0;
             padding: 10px;
