--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: #E36414; 
             color: #1B4242;
         }
-        /* Add or update your existing styles */
+        
 .container {
     display: flex;
     flex-direction: column;
@@ -18,12 +18,12 @@
 }
 
 #chatbox, button {
-    width: 600px; /* Make both chatbox and button 600px wide */
-    margin: 20px auto; /* Centering */
+    width: 600px; 
+    margin: 20px auto; /* Center */
 }
 
 #chatbox {
-    height: 400px; /* Adjusted to your preference */
+    height: 400px; 
     border: 2px solid #9A031E;
     padding: 10px;
     background-color: #5F0F40;
