--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button {
                 <div id="chatbox">
                     
                 </div>
-                <input type="text" id="message" name="message" placeholder="Say something racist" aria-label="say something racist" required />
+                <input type="text" id="message" name="message" placeholder="Say something racist" aria-label="say something racist!" required />
                 <button type="submit" onclick="event.preventDefault()">do it</button>
             </section>
         </div>
